deploy-istio/destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: logic
  namespace: istio-test
spec:
  host: logic
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
